// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multipartDtoToFormData should return form data 1`] = `
FormData {
  "_checkDataSize": [MockFunction],
  "_emitError": [MockFunction],
  "_error": [MockFunction],
  "_generateBoundary": [MockFunction],
  "_getContentDisposition": [MockFunction],
  "_getContentType": [MockFunction],
  "_getNext": [MockFunction],
  "_handleErrors": [MockFunction],
  "_lastBoundary": [MockFunction],
  "_lengthRetriever": [MockFunction],
  "_multiPartFooter": [MockFunction],
  "_multiPartHeader": [MockFunction],
  "_pipeNext": [MockFunction],
  "_realGetNext": [MockFunction],
  "_reset": [MockFunction],
  "_trackLength": [MockFunction],
  "_updateDataSize": [MockFunction],
  "addListener": [MockFunction],
  "append": [MockFunction] {
    "calls": Array [
      Array [
        "buildId",
        "buildId",
      ],
      Array [
        "projectId",
        "projectId",
      ],
      Array [
        "branchName",
        "develop",
      ],
      Array [
        "name",
        "name",
      ],
      Array [
        "image",
        ReadStream {
          "_events": Object {
            "end": [Function],
          },
          "_eventsCount": 1,
          "_maxListeners": undefined,
          "_readableState": ReadableState {
            "autoDestroy": false,
            "awaitDrainWriters": null,
            "buffer": BufferList {
              "head": null,
              "length": 0,
              "tail": null,
            },
            "decoder": null,
            "defaultEncoding": "utf8",
            "destroyed": false,
            "emitClose": false,
            "emittedReadable": false,
            "encoding": null,
            "endEmitted": false,
            "ended": false,
            "flowing": null,
            "highWaterMark": 65536,
            "length": 0,
            "multiAwaitDrain": false,
            "needReadable": false,
            "objectMode": false,
            "pipes": null,
            "pipesCount": 0,
            "readableListening": false,
            "reading": false,
            "readingMore": false,
            "resumeScheduled": false,
            "sync": true,
            Symbol(kPaused): null,
          },
          "autoClose": true,
          "bytesRead": 0,
          "closed": false,
          "end": Infinity,
          "fd": null,
          "flags": "r",
          "mode": 438,
          "path": "./lib/__data__/2.png",
          "pos": undefined,
          "readable": true,
          "start": undefined,
          Symbol(kFs): Object {
            "Dir": [Function],
            "Dirent": [Function],
            "F_OK": 0,
            "FileReadStream": [Function],
            "FileWriteStream": [Function],
            "R_OK": 4,
            "ReadStream": [Function],
            "Stats": [Function],
            "W_OK": 2,
            "WriteStream": [Function],
            "X_OK": 1,
            "_toUnixTimestamp": [Function],
            "access": [Function],
            "accessSync": [Function],
            "appendFile": [Function],
            "appendFileSync": [Function],
            "chmod": [Function],
            "chmodSync": [Function],
            "chown": [Function],
            "chownSync": [Function],
            "close": [Function],
            "closeSync": [Function],
            "constants": Object {
              "COPYFILE_EXCL": 1,
              "COPYFILE_FICLONE": 2,
              "COPYFILE_FICLONE_FORCE": 4,
              "F_OK": 0,
              "O_APPEND": 8,
              "O_CREAT": 512,
              "O_DIRECTORY": 1048576,
              "O_DSYNC": 4194304,
              "O_EXCL": 2048,
              "O_NOCTTY": 131072,
              "O_NOFOLLOW": 256,
              "O_NONBLOCK": 4,
              "O_RDONLY": 0,
              "O_RDWR": 2,
              "O_SYMLINK": 2097152,
              "O_SYNC": 128,
              "O_TRUNC": 1024,
              "O_WRONLY": 1,
              "R_OK": 4,
              "S_IFBLK": 24576,
              "S_IFCHR": 8192,
              "S_IFDIR": 16384,
              "S_IFIFO": 4096,
              "S_IFLNK": 40960,
              "S_IFMT": 61440,
              "S_IFREG": 32768,
              "S_IFSOCK": 49152,
              "S_IRGRP": 32,
              "S_IROTH": 4,
              "S_IRUSR": 256,
              "S_IRWXG": 56,
              "S_IRWXO": 7,
              "S_IRWXU": 448,
              "S_IWGRP": 16,
              "S_IWOTH": 2,
              "S_IWUSR": 128,
              "S_IXGRP": 8,
              "S_IXOTH": 1,
              "S_IXUSR": 64,
              "UV_DIRENT_BLOCK": 7,
              "UV_DIRENT_CHAR": 6,
              "UV_DIRENT_DIR": 2,
              "UV_DIRENT_FIFO": 4,
              "UV_DIRENT_FILE": 1,
              "UV_DIRENT_LINK": 3,
              "UV_DIRENT_SOCKET": 5,
              "UV_DIRENT_UNKNOWN": 0,
              "UV_FS_COPYFILE_EXCL": 1,
              "UV_FS_COPYFILE_FICLONE": 2,
              "UV_FS_COPYFILE_FICLONE_FORCE": 4,
              "UV_FS_O_FILEMAP": 0,
              "UV_FS_SYMLINK_DIR": 1,
              "UV_FS_SYMLINK_JUNCTION": 2,
              "W_OK": 2,
              "X_OK": 1,
            },
            "copyFile": [Function],
            "copyFileSync": [Function],
            "createReadStream": [Function],
            "createWriteStream": [Function],
            "exists": [Function],
            "existsSync": [Function],
            "fchmod": [Function],
            "fchmodSync": [Function],
            "fchown": [Function],
            "fchownSync": [Function],
            "fdatasync": [Function],
            "fdatasyncSync": [Function],
            "fstat": [Function],
            "fstatSync": [Function],
            "fsync": [Function],
            "fsyncSync": [Function],
            "ftruncate": [Function],
            "ftruncateSync": [Function],
            "futimes": [Function],
            "futimesSync": [Function],
            "lchmod": [Function],
            "lchmodSync": [Function],
            "lchown": [Function],
            "lchownSync": [Function],
            "link": [Function],
            "linkSync": [Function],
            "lstat": [Function],
            "lstatSync": [Function],
            "mkdir": [Function],
            "mkdirSync": [Function],
            "mkdtemp": [Function],
            "mkdtempSync": [Function],
            "open": [Function],
            "openSync": [Function],
            "opendir": [Function],
            "opendirSync": [Function],
            "promises": Object {
              "access": [Function],
              "appendFile": [Function],
              "chmod": [Function],
              "chown": [Function],
              "copyFile": [Function],
              "lchmod": [Function],
              "lchown": [Function],
              "link": [Function],
              "lstat": [Function],
              "mkdir": [Function],
              "mkdtemp": [Function],
              "open": [Function],
              "opendir": [Function],
              "readFile": [Function],
              "readdir": [Function],
              "readlink": [Function],
              "realpath": [Function],
              "rename": [Function],
              "rmdir": [Function],
              "stat": [Function],
              "symlink": [Function],
              "truncate": [Function],
              "unlink": [Function],
              "utimes": [Function],
              "writeFile": [Function],
            },
            "read": [Function],
            "readFile": [Function],
            "readFileSync": [Function],
            "readSync": [Function],
            "readdir": [Function],
            "readdirSync": [Function],
            "readlink": [Function],
            "readlinkSync": [Function],
            "readv": [Function],
            "readvSync": [Function],
            "realpath": [Function],
            "realpathSync": [Function],
            "rename": [Function],
            "renameSync": [Function],
            "rmdir": [Function],
            "rmdirSync": [Function],
            "stat": [Function],
            "statSync": [Function],
            "symlink": [Function],
            "symlinkSync": [Function],
            "truncate": [Function],
            "truncateSync": [Function],
            "unlink": [Function],
            "unlinkSync": [Function],
            "unwatchFile": [Function],
            "utimes": [Function],
            "utimesSync": [Function],
            "watch": [Function],
            "watchFile": [Function],
            "write": [Function],
            "writeFile": [Function],
            "writeFileSync": [Function],
            "writeSync": [Function],
            "writev": [Function],
            "writevSync": [Function],
          },
          Symbol(kCapture): false,
          Symbol(kIsPerformingIO): false,
        },
        Object {
          "knownLength": 82031,
        },
      ],
      Array [
        "os",
        "os",
      ],
      Array [
        "browser",
        "browser",
      ],
      Array [
        "viewport",
        "viewport",
      ],
      Array [
        "device",
        "device",
      ],
      Array [
        "ignoreAreas",
        "[{\\"x\\":1,\\"y\\":2,\\"height\\":300,\\"width\\":400}]",
      ],
      Array [
        "diffTollerancePercent",
        0.123,
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "destroy": [MockFunction],
  "emit": [MockFunction],
  "end": [MockFunction],
  "eventNames": [MockFunction],
  "getBoundary": [MockFunction],
  "getBuffer": [MockFunction],
  "getHeaders": [MockFunction],
  "getLength": [MockFunction],
  "getLengthSync": [MockFunction],
  "getMaxListeners": [MockFunction],
  "hasKnownLength": [MockFunction],
  "listenerCount": [MockFunction],
  "listeners": [MockFunction],
  "once": [MockFunction],
  "pause": [MockFunction],
  "pipe": [MockFunction],
  "prependListener": [MockFunction],
  "prependOnceListener": [MockFunction],
  "rawListeners": [MockFunction],
  "removeAllListeners": [MockFunction],
  "removeListener": [MockFunction],
  "resume": [MockFunction],
  "setBoundary": [MockFunction],
  "setMaxListeners": [MockFunction],
  "submit": [MockFunction],
  "toString": [MockFunction],
  "write": [MockFunction],
}
`;

exports[`multipartDtoToFormData should return form data 2`] = `
FormData {
  "_checkDataSize": [MockFunction],
  "_emitError": [MockFunction],
  "_error": [MockFunction],
  "_generateBoundary": [MockFunction],
  "_getContentDisposition": [MockFunction],
  "_getContentType": [MockFunction],
  "_getNext": [MockFunction],
  "_handleErrors": [MockFunction],
  "_lastBoundary": [MockFunction],
  "_lengthRetriever": [MockFunction],
  "_multiPartFooter": [MockFunction],
  "_multiPartHeader": [MockFunction],
  "_pipeNext": [MockFunction],
  "_realGetNext": [MockFunction],
  "_reset": [MockFunction],
  "_trackLength": [MockFunction],
  "_updateDataSize": [MockFunction],
  "addListener": [MockFunction],
  "append": [MockFunction] {
    "calls": Array [
      Array [
        "buildId",
        "buildId",
      ],
      Array [
        "projectId",
        "projectId",
      ],
      Array [
        "branchName",
        "develop",
      ],
      Array [
        "name",
        "name",
      ],
      Array [
        "image",
        ReadStream {
          "_events": Object {
            "end": [Function],
          },
          "_eventsCount": 1,
          "_maxListeners": undefined,
          "_readableState": ReadableState {
            "autoDestroy": false,
            "awaitDrainWriters": null,
            "buffer": BufferList {
              "head": null,
              "length": 0,
              "tail": null,
            },
            "decoder": null,
            "defaultEncoding": "utf8",
            "destroyed": false,
            "emitClose": false,
            "emittedReadable": false,
            "encoding": null,
            "endEmitted": false,
            "ended": false,
            "flowing": null,
            "highWaterMark": 65536,
            "length": 0,
            "multiAwaitDrain": false,
            "needReadable": false,
            "objectMode": false,
            "pipes": null,
            "pipesCount": 0,
            "readableListening": false,
            "reading": false,
            "readingMore": false,
            "resumeScheduled": false,
            "sync": true,
            Symbol(kPaused): null,
          },
          "autoClose": true,
          "bytesRead": 0,
          "closed": false,
          "end": Infinity,
          "fd": null,
          "flags": "r",
          "mode": 438,
          "path": "./lib/__data__/2.png",
          "pos": undefined,
          "readable": true,
          "start": undefined,
          Symbol(kFs): Object {
            "Dir": [Function],
            "Dirent": [Function],
            "F_OK": 0,
            "FileReadStream": [Function],
            "FileWriteStream": [Function],
            "R_OK": 4,
            "ReadStream": [Function],
            "Stats": [Function],
            "W_OK": 2,
            "WriteStream": [Function],
            "X_OK": 1,
            "_toUnixTimestamp": [Function],
            "access": [Function],
            "accessSync": [Function],
            "appendFile": [Function],
            "appendFileSync": [Function],
            "chmod": [Function],
            "chmodSync": [Function],
            "chown": [Function],
            "chownSync": [Function],
            "close": [Function],
            "closeSync": [Function],
            "constants": Object {
              "COPYFILE_EXCL": 1,
              "COPYFILE_FICLONE": 2,
              "COPYFILE_FICLONE_FORCE": 4,
              "F_OK": 0,
              "O_APPEND": 8,
              "O_CREAT": 512,
              "O_DIRECTORY": 1048576,
              "O_DSYNC": 4194304,
              "O_EXCL": 2048,
              "O_NOCTTY": 131072,
              "O_NOFOLLOW": 256,
              "O_NONBLOCK": 4,
              "O_RDONLY": 0,
              "O_RDWR": 2,
              "O_SYMLINK": 2097152,
              "O_SYNC": 128,
              "O_TRUNC": 1024,
              "O_WRONLY": 1,
              "R_OK": 4,
              "S_IFBLK": 24576,
              "S_IFCHR": 8192,
              "S_IFDIR": 16384,
              "S_IFIFO": 4096,
              "S_IFLNK": 40960,
              "S_IFMT": 61440,
              "S_IFREG": 32768,
              "S_IFSOCK": 49152,
              "S_IRGRP": 32,
              "S_IROTH": 4,
              "S_IRUSR": 256,
              "S_IRWXG": 56,
              "S_IRWXO": 7,
              "S_IRWXU": 448,
              "S_IWGRP": 16,
              "S_IWOTH": 2,
              "S_IWUSR": 128,
              "S_IXGRP": 8,
              "S_IXOTH": 1,
              "S_IXUSR": 64,
              "UV_DIRENT_BLOCK": 7,
              "UV_DIRENT_CHAR": 6,
              "UV_DIRENT_DIR": 2,
              "UV_DIRENT_FIFO": 4,
              "UV_DIRENT_FILE": 1,
              "UV_DIRENT_LINK": 3,
              "UV_DIRENT_SOCKET": 5,
              "UV_DIRENT_UNKNOWN": 0,
              "UV_FS_COPYFILE_EXCL": 1,
              "UV_FS_COPYFILE_FICLONE": 2,
              "UV_FS_COPYFILE_FICLONE_FORCE": 4,
              "UV_FS_O_FILEMAP": 0,
              "UV_FS_SYMLINK_DIR": 1,
              "UV_FS_SYMLINK_JUNCTION": 2,
              "W_OK": 2,
              "X_OK": 1,
            },
            "copyFile": [Function],
            "copyFileSync": [Function],
            "createReadStream": [Function],
            "createWriteStream": [Function],
            "exists": [Function],
            "existsSync": [Function],
            "fchmod": [Function],
            "fchmodSync": [Function],
            "fchown": [Function],
            "fchownSync": [Function],
            "fdatasync": [Function],
            "fdatasyncSync": [Function],
            "fstat": [Function],
            "fstatSync": [Function],
            "fsync": [Function],
            "fsyncSync": [Function],
            "ftruncate": [Function],
            "ftruncateSync": [Function],
            "futimes": [Function],
            "futimesSync": [Function],
            "lchmod": [Function],
            "lchmodSync": [Function],
            "lchown": [Function],
            "lchownSync": [Function],
            "link": [Function],
            "linkSync": [Function],
            "lstat": [Function],
            "lstatSync": [Function],
            "mkdir": [Function],
            "mkdirSync": [Function],
            "mkdtemp": [Function],
            "mkdtempSync": [Function],
            "open": [Function],
            "openSync": [Function],
            "opendir": [Function],
            "opendirSync": [Function],
            "promises": Object {
              "access": [Function],
              "appendFile": [Function],
              "chmod": [Function],
              "chown": [Function],
              "copyFile": [Function],
              "lchmod": [Function],
              "lchown": [Function],
              "link": [Function],
              "lstat": [Function],
              "mkdir": [Function],
              "mkdtemp": [Function],
              "open": [Function],
              "opendir": [Function],
              "readFile": [Function],
              "readdir": [Function],
              "readlink": [Function],
              "realpath": [Function],
              "rename": [Function],
              "rmdir": [Function],
              "stat": [Function],
              "symlink": [Function],
              "truncate": [Function],
              "unlink": [Function],
              "utimes": [Function],
              "writeFile": [Function],
            },
            "read": [Function],
            "readFile": [Function],
            "readFileSync": [Function],
            "readSync": [Function],
            "readdir": [Function],
            "readdirSync": [Function],
            "readlink": [Function],
            "readlinkSync": [Function],
            "readv": [Function],
            "readvSync": [Function],
            "realpath": [Function],
            "realpathSync": [Function],
            "rename": [Function],
            "renameSync": [Function],
            "rmdir": [Function],
            "rmdirSync": [Function],
            "stat": [Function],
            "statSync": [Function],
            "symlink": [Function],
            "symlinkSync": [Function],
            "truncate": [Function],
            "truncateSync": [Function],
            "unlink": [Function],
            "unlinkSync": [Function],
            "unwatchFile": [Function],
            "utimes": [Function],
            "utimesSync": [Function],
            "watch": [Function],
            "watchFile": [Function],
            "write": [Function],
            "writeFile": [Function],
            "writeFileSync": [Function],
            "writeSync": [Function],
            "writev": [Function],
            "writevSync": [Function],
          },
          Symbol(kCapture): false,
          Symbol(kIsPerformingIO): false,
        },
        Object {
          "knownLength": 82031,
        },
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "destroy": [MockFunction],
  "emit": [MockFunction],
  "end": [MockFunction],
  "eventNames": [MockFunction],
  "getBoundary": [MockFunction],
  "getBuffer": [MockFunction],
  "getHeaders": [MockFunction],
  "getLength": [MockFunction],
  "getLengthSync": [MockFunction],
  "getMaxListeners": [MockFunction],
  "hasKnownLength": [MockFunction],
  "listenerCount": [MockFunction],
  "listeners": [MockFunction],
  "once": [MockFunction],
  "pause": [MockFunction],
  "pipe": [MockFunction],
  "prependListener": [MockFunction],
  "prependOnceListener": [MockFunction],
  "rawListeners": [MockFunction],
  "removeAllListeners": [MockFunction],
  "removeListener": [MockFunction],
  "resume": [MockFunction],
  "setBoundary": [MockFunction],
  "setMaxListeners": [MockFunction],
  "submit": [MockFunction],
  "toString": [MockFunction],
  "write": [MockFunction],
}
`;
